# oh-coder-template

./: .env.example  .openhands_instructions  README.md  pyproject.toml  setup_secrets.sh
.GitHub/workflows/: openhands-resolver.yml
.openhands/skills/: repo.md
docs/: ARCHITECTURE.md
